# Esports-news

./: .flake8  .gitignore  README.md  create_admin.py  get_all_news.py  pyproject.toml  python_org_news.py  run.sh  server.py  weather.py  webapp.db
migrations/versions/: 3e1a35450427_added_email_to_eser.py  ab12da1bba74_user_and_news_tables.py
templates/: index.html  python.org.html  python_news.html
webapp/: __init__.py  config.py  forms.py  model.py  python_org_news.py  server.py  weather.py
webapp/admin/: views.py
webapp/templates/: index.html  login.html
webapp/user/: models.py  views.py
