[tool.poetry]
name = "veb_html"
version = "0.1.0"
description = "for my project on flask"
authors = ["Stepan <stpokorn@ya.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
requests = "^2.27.1"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
